<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id = "@+id/tv_system_manage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop = "20dp"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:textSize = "12sp"
            android:textColor = "#6b6b6b"
            android:text = "@string/system_manage" />

        <TextView
            android:id = "@+id/tv_system_manage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background = "@android:color/white"
            android:text = "@string/app_on_top"
            android:textColor = "#323232"
            android:gravity = "start"
            android:paddingTop = "13dp"
            android:paddingBottom="13dp"
            android:paddingStart = "28dp"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:textSize = "14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_system_manage1"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id = "@+id/tv_system_manage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background = "@android:color/white"
            android:text = "@string/push_alarm"
            android:textColor = "#323232"
            android:gravity = "start"
            android:paddingTop = "13dp"
            android:paddingBottom="13dp"
            android:paddingStart = "28dp"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:textSize = "14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_system_manage2"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id = "@+id/tv_system_manage4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background = "@android:color/white"
            android:text = "@string/version"
            android:textColor = "#323232"
            android:gravity = "start"
            android:paddingTop = "13dp"
            android:paddingBottom="13dp"
            android:paddingStart = "28dp"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:textSize = "14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_system_manage3"
            app:layout_constraintStart_toStartOf="parent"/>

        <Switch
            android:id="@+id/system_switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_system_manage2"
            app:layout_constraintBottom_toBottomOf="@id/tv_system_manage2"
            android:thumb = "@drawable/setting_switch_thumb"
            android:track = "@drawable/setting_switch_track"
            tools:checked="true"
            android:checked="true"
            android:layout_marginEnd = "20.7dp"/>

        <Switch
            android:id="@+id/system_switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_system_manage3"
            app:layout_constraintBottom_toBottomOf="@id/tv_system_manage3"
            tools:checked="true"
            android:checked="true"
            android:thumb = "@drawable/setting_switch_thumb"
            android:track = "@drawable/setting_switch_track"
            android:layout_marginEnd = "20.7dp"/>

    </android.support.constraint.ConstraintLayout>

</layout>